css/styles.css
body {
  font-size: .875rem;
  color: #000000;
}

.feather {
  width: 16px;
  height: 16px;
  vertical-align: text-bottom;
}

/*
 * Sidebar
 */

.sidebar {
  position: fixed;
  bottom: 0;
  left: 0;
  z-index: 100; /* Behind the navbar */
  padding: 0;
  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
  border-right: 4px solid black;
}

.sidebar-sticky {
  position: -webkit-sticky;
  position: sticky;
  background-color: #3dbb95;
  top: 48px; /* Height of navbar */
  height: calc(100vh - 48px);
  padding-top: .5rem;
  overflow-x: hidden;
}

.card-header {
  background-color: rgba(0, 0, 0, .84);
}

.sidebar .nav-link {
  font-weight: 500;
  color: #333;
}

.sidebar .nav-link .feather {
  margin-right: 4px;
  color: #999;
}

.sidebar .nav-link.active {
  color: #007bff;
}

.sidebar .nav-link:hover .feather,
.sidebar .nav-link.active .feather {
  color: inherit;
}

.sidebar-heading {
  font-size: .75rem;
  text-transform: uppercase;
}

/*
 * Navbar
 */

.navbar-brand {
  padding-top: .75rem;
  padding-bottom: .75rem;
  font-size: 1rem;
  font-weight: bold;
  background-color: rgba(180, 47, 47, .90);
  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
  color: #ffffff;
}

.navbar-brand:hover {
  color: #ffffff;
}

.navbar .form-control {
  padding: .75rem 1rem;
  border-width: 0;
  border-radius: 0;
}

.navbar {
  background-color: #46e85a;
  border-bottom: 4px solid black;
  border-top: 4px solid black;
}

.form-control-dark {
  color: #fff;
  background-color: rgba(255, 255, 255, .1);
  border-color: rgba(255, 255, 255, .1);
}

.form-control-dark:focus {
  border-color: transparent;
  box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
}

.nav-align {
  width: 270px;
}

@media only screen and (max-width: 600px) {
    .nav-align {
      width: auto;
      padding: .75rem;
    }
}

/*
 * Utilities
 */

.border-top {
  border-top: 1px solid #e5e5e5;
}

.border-bottom {
  border-bottom: 1px solid #e5e5e5;
}

.scroll-div {
  overflow-x: scroll;
  overflow-y: scroll;
}

.expand-height {
  height: 100vh;
}

#main-div {
  background-color: #314587;
}

#board {
  border: 4px solid black;
}

#events-area {
  box-sizing: border-box;
  border: 4px solid black;
  width: 820px;
  height: 180px;
  font-size: 0.9rem;
}

#queued-events-heading {
  text-align: center;
}

#github-button {
  height: 40px;
}

#queued-events-button {
  
}

